--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: devsecops
   name: devsecops
+  namespace: koenig
 spec:
   replicas: 2
   selector:
@@ -25,6 +26,7 @@ metadata:
   labels:
     app: devsecops
   name: devsecops-svc
+  namespace: koenig
 spec:
   ports:
   - port: 8080
